# silmari-reels-af

./: .dockerignore  .gitignore  .railwayignore  AGENTFIELD_SDK_ISSUES.md  DOLT_REMOTE.md  Dockerfile  README.md  manifest  pyproject.toml  railway.toml
baml_src/: arrange.baml  clients.baml  generators.baml  mine.baml  retention.baml  script_coherence.baml  strategize.baml  types.baml
deploy/: RAILWAY-RUNBOOK.md  deploy.sh
docs/: ALGORITHM.md  ARCHITECTURE_V2.md  RESEARCH.md  railway-deployment.md
ops/: seed_a1_service_user.sql
remotion/: package-lock.json  package.json  tsconfig.json
remotion/src/: LowerThird.tsx  MiddleThird.tsx  Root.tsx  effectSchema.ts
resources/evals/: .gitkeep
resources/runs/: .gitkeep
scripts/: ingest_source.py  resolve_output_dir.py  run_arxiv_batch.py  run_arxiv_one.py  run_batch.sh  run_batch_parallel.py  run_random3.py
src/baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
src/reel_af/: app.py  cli.py  models.py  naming.py  pipeline.py  recreate.py  recreate_config.json  sdk_patches.py  storage.py
src/reel_af/agents/: captioner.py  creator_playbook.py  critic.py  distiller.py  extract.py  hunters.py  shot_director_v2.py  tag_injector.py  tts_continuous.py  video_gen.py  visual_arc.py  visual_vocab.py
src/reel_af/dsl/: __init__.py  aligner.py  ast.py  compile.py  composite.py  cutins.py  models.py  parser.py  relevant.py  resolver.py  snap.py
src/reel_af/planner/: __init__.py  config.py  dispatch.py  ingest.py  lint.py  llm.py  models.py  paths.py  pipeline.py  script_coherence.py  serialize.py  transcribe.py  verbatim.py
src/reel_af/render/: captions.py  composite_pipeline.py  finish.py  finish_config.py  finish_defaults.py  footage_stitch.py  hooks.py  image_cutins.py  images.py  lower_third.py  middle_third.py  overlay_stitch.py  overlays.py  presets.py  stitch.py  transcription_cache.py  tunables.py
src/reel_af/v2/: models.py  pipeline.py
tests/: conftest.py  test_alignment_smoke.py  test_banner.py  test_banner_computed.py  test_banner_fill.py  test_captions.py  test_carousel.py  test_composite_cli.py  test_composite_overrides.py  test_composite_pipeline.py  test_default_segment_fetch.py  test_dsl_hooks_finish_closure.py  test_dsl_hooks_worker_closure.py  test_finish.py  test_finish_closure.py  test_finish_config.py  test_hooks.py  test_image_cutins.py  test_ingest.py  test_naming.py  test_overlay_props.py  test_provider_contract.py  test_reasoner_registration.py  test_recreate.py  test_recreate_guard_contract.py  test_reels_cli.py  test_research_to_reel.py  test_schema_strict.py  test_shot_planner.py  test_single_pass_stitch.py  test_stitch.py  test_storage.py  test_topic_loopback_fallback.py  test_transcription_cache.py  test_tunables.py  test_tunables_parity.py  test_youtube_intake.py  util.py  util_captions.py
tests/dsl/: conftest.py  test_a1_artifact_parity.py  test_aligner.py  test_aligner_exact_fallback.py  test_aligner_fuzzy.py  test_aligner_timecode_anchor.py  test_artifact_resolver.py  test_audio_bed.py  test_compile.py  test_compile_black.py  test_compile_clamp_contiguous.py  test_compile_collapse_regression.py  test_compile_context.py  test_compile_extend.py  test_compile_injectivity.py  test_compile_join.py  test_compile_reordered_segments.py  test_compile_trans.py  test_compile_unsupported.py  test_composite.py  test_cutin_mapping.py  test_dsl_hooks_stitch.py  test_fixture_scaffold.py  test_footage_stitch_graph.py  test_footage_stitch_integration.py  test_invalid_markers.py  test_models.py  test_overlay_stitch.py  test_overlay_stitch_integration.py  test_overlays.py  test_relevant.py  test_renderability_postconditions.py  test_resolver.py  test_segment_assets.py  test_segment_fetch_cut.py  test_snap.py  test_unsupported_markers.py
tests/dsl/fixtures/: a1_composite.ts.md  a1_hook_plan.json  collapse_forced.ts.md  collapse_forced.words.json  collapse_repro.ts.md  collapse_repro.words.json  reordered_segments.ts.md  reordered_segments.words.json  seam_overlap.ts.md  seam_overlap.words.json  source.words.json  v1_supported.ts.md
tests/planner/: __init__.py  conftest.py  factories.py  test_baml_client.py  test_config.py  test_dispatch.py  test_ingest.py  test_lint.py  test_llm.py  test_llm_real.py  test_models.py  test_paths.py  test_pipeline.py  test_pipeline_repair.py  test_prompts.py  test_reasoner.py  test_reel_completed_event.py  test_script_coherence.py  test_serialize.py  test_transcribe.py  test_transcribe_chain.py  test_transcribe_real.py  test_verbatim.py
tests/planner/eval/: __init__.py  test_gates_runner.py  test_judge.py  (+2 more)
tests/render/: test_cutin_overlay.py
tests/web/: conftest.py  test_a1_transcript_submit.py  test_app_factory.py  test_auth.py  test_bucket_upload.py  test_carousel_routes.py  test_control_plane.py  test_create_from_research.py  test_dispatch.py  test_dsl_hooks_poll.py  test_dsl_hooks_submit.py  test_index_contract.py  test_lineage_routes.py  test_lineage_view.py  test_object_storage.py  test_orphaned_dispatch.py  test_poll.py  test_project_asset_download.py  test_project_reels.py  test_project_schema.py  test_projects_api.py  test_projects_page_contract.py  test_provenance_regression.py  test_readiness.py  test_reel_delivery_closure.py  test_research_completion_consumer.py  test_research_consumer_driver.py  test_research_event_contract.py  test_research_handoff.py  test_research_write_removed.py  test_routes.py  test_run_reader_port.py  test_service_token_closure.py  test_slide_route.py  test_source_assets.py  test_status.py  test_storage.py  test_submit.py  test_submit_from_asset.py  test_upload.py
web/: Dockerfile  api_messages.json  auth.py  carousel_ui_config.json  carousels.py  control_plane.py  deps.py  events.json  events.py  index.html  lineage.py  login.html  media_config.json  pg.py  projects.html  projects.py  railway.toml  reel_jobs.py  requirements.txt  research_defaults.json  research_reader.py  server.py  source_assets.py  storage.py  tunables.py  uploads.py
(+98 files in other folders)
