[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reel-af"
version = "1.0.0"
description = "URL or topic → vertical viral reel via a multi-reasoner DAG on AgentField."
license = { text = "Apache-2.0" }
authors = [{ name = "AgentField Contributors" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agentfield",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "readability-lxml>=0.8",
    "lxml[html_clean]>=5.0",
    "typer>=0.12",
    "rich>=13.0",
    "Pillow>=10.0",
    "pysubs2>=1.7",
    "youtube-transcript-api>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
reel-af = "reel_af.cli:main"
reel-af-server = "reel_af.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
