[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reel-af"
version = "1.0.0"
description = "URL or topic → vertical viral reel via a multi-reasoner DAG on AgentField."
license = { text = "Apache-2.0" }
authors = [{ name = "AgentField Contributors" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Installed from OUR fork (tha-hammer/agentfield), not PyPI — PyPI is the
    # upstream (Agent-Field) distribution channel we don't control, and the fork
    # carries the handoff SDK (fetch_body/announce/registry + frozen contracts)
    # that upstream releases don't. Track the fork's main in lockstep with the
    # deployed control-plane; pin a specific rev here if you need an exact match.
    "agentfield @ git+https://github.com/tha-hammer/agentfield.git@main#subdirectory=sdk/python",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "readability-lxml>=0.8",
    "lxml[html_clean]>=5.0",
    "typer>=0.12",
    "rich>=13.0",
    "Pillow>=10.0",
    "pysubs2>=1.7",
    "youtube-transcript-api>=0.6",
    # T10: deliver produced reels out to the shared S3-compatible bucket so the
    # browser can download them (the reel lives on the node's ephemeral fs).
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
reel-af = "reel_af.cli:main"
reel-af-server = "reel_af.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"reel_af.agents" = ["config/*.json"]
"reel_af.render" = ["config/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: needs a live Postgres (TEST_DATABASE_URL); reel_job SQL contract tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# web/deps.py defines HTTP-status exceptions named after Werkzeug/HTTP semantics
# (BadRequest, NotFound, Unauthorized, ...) — none carry an "Error" suffix, matching
# the framework's own exception vocabulary. N818 (Error-suffix) does not apply here.
"web/deps.py" = ["N818"]

[dependency-groups]
dev = [
    "hypothesis>=6.156.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
    # web/ (reel-af-ui) test env — the UI service is a separate deployable
    # (web/requirements.txt), but its behavior tests under tests/web/ run in the
    # main project env and need Flask + requests importable to exercise routes.
    # psycopg drives the `-m integration` reel_job contract tests (TEST_DATABASE_URL).
    "flask>=3.0",
    "requests>=2.31",
    "psycopg[binary]>=3.1",
]
